// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelInfoModal renders component 1`] = `
<Memo(WithStyles(Modal))
  fullPage={true}
  handleClose={[MockFunction]}
  isBold={true}
  open={true}
  title="Channel Information"
>
  <AutoSizer
    disableHeight={false}
    disableWidth={false}
    onResize={[Function]}
    style={Object {}}
  >
    <Component />
  </AutoSizer>
</Memo(WithStyles(Modal))>
`;

exports[`ChannelInfoModal renders component when closed 1`] = `
<Memo(WithStyles(Modal))
  fullPage={true}
  handleClose={[MockFunction]}
  isBold={true}
  open={false}
  title="Channel Information"
>
  <AutoSizer
    disableHeight={false}
    disableWidth={false}
    onResize={[Function]}
    style={Object {}}
  >
    <Component />
  </AutoSizer>
</Memo(WithStyles(Modal))>
`;
